[XForms] help @src only works with absolute urls. Bug 329106, patch by msterlin, r=olli+aaronr